<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#00FFFFFF">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="8dp"
        app:cardCornerRadius="24dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#171717">

            <TextView
                android:id="@+id/tvDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp"
                android:text="@string/distancePrefix"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/cardView2"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tvDate"
                app:layout_constraintTop_toBottomOf="@+id/tvDate" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/datePrefix"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/cardView2"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tvStationPath"
                app:layout_constraintTop_toBottomOf="@+id/tvStationPath" />

            <TextView
                android:id="@+id/tvStationPath"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/station_pathPrefix"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/cardView2"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tvOriginStation"
                app:layout_constraintTop_toBottomOf="@+id/tvOriginStation" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="4dp"
                app:layout_constraintEnd_toEndOf="@+id/ivMap"
                app:layout_constraintTop_toBottomOf="@+id/ivMap">

                <TextView
                    android:id="@+id/tvCityName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/colorPrimary"
                    android:text="@string/state_name"
                    android:textColor="?attr/colorOnPrimary" />
            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/ivMap"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:contentDescription="@string/map_image"
                android:scaleType="centerCrop"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="4dp"
                app:layout_constraintStart_toStartOf="@+id/ivMap"
                app:layout_constraintTop_toBottomOf="@+id/ivMap">

                <TextView
                    android:id="@+id/tvStateName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/colorPrimary"
                    android:text="@string/city_name"
                    android:textColor="?attr/colorOnPrimary" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvRideId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/ride_idPrefix"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/cardView2"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/cardView"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />

            <TextView
                android:id="@+id/tvOriginStation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/origin_stationPrefix"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/cardView2"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tvRideId"
                app:layout_constraintTop_toBottomOf="@+id/tvRideId" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>