<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryVariant"
    tools:context=".ui.MainActivity">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tl_frag_rides"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="?attr/colorPrimaryVariant"
        android:contentDescription="@string/ride_types"
        android:elevation="@dimen/cardview_default_elevation"
        app:layout_constraintEnd_toStartOf="@+id/btnFilters"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:tabIndicator="@color/white"
        app:tabMode="scrollable"
        app:tabSelectedTextColor="?attr/colorOnPrimary"
        app:tabTextColor="#D0CBCB" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp_frag_rides"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tl_frag_rides" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/rides"
        android:textColor="#E5E5E5"
        app:layout_constraintBottom_toTopOf="@+id/vp_frag_rides"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnFilters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:text="@string/filters"
        app:icon="@drawable/ic_baseline_filter_list_24"
        app:layout_constraintBottom_toTopOf="@+id/vp_frag_rides"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <LinearLayout
        android:id="@+id/llFilters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="?attr/colorPrimary"
        android:orientation="vertical"
        android:padding="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFilters"
        app:layout_constraintVertical_bias="0.0"
        tools:visibility="visible">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/filters"
            android:textColor="#A5A5A5"
            android:textSize="20sp" />

        <!--        <Spinner-->
        <!--            android:id="@+id/spinnerState"-->
        <!--            style="@style/SpinnerItem"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content" />-->

        <!--        <Spinner-->
        <!--            android:id="@+id/spinnerCity"-->
        <!--            style="@style/SpinnerItem"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content" />-->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="?attr/colorPrimaryVariant"
            android:hint="@string/state"
            android:orientation="horizontal">


            <AutoCompleteTextView
                android:id="@+id/spinnerState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimaryVariant"
                android:inputType="none"
                android:textColor="?attr/colorPrimaryVariant" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimaryVariant"
            android:hint="@string/city"
            android:orientation="horizontal">


            <AutoCompleteTextView
                android:id="@+id/spinnerCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimaryVariant"
                android:inputType="none"
                android:textColor="?attr/colorPrimaryVariant" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>